# MyFirstCPPStep

./: .gitignore  CMakeLists.txt  README.md  main.cpp
First_mini_project/: main.cpp  math_operations.cpp  math_operations.h
Practice/: loops.cpp  task1_calculator.cpp  task2_score_to_grade.cpp  task3_calculator_deluxe.cpp
